<resources>
    <string name="app_name">lullabies</string>

    <string name="keyName">keyName</string>

    <string name="checkbox1_title">CheckBox 1</string>
    <string name="checkbox1_summary">Summary of CheckBox 1</string>
    <string name="edittext1_title">EditText 1</string>
    <string name="edittext1_summary">Summary of EditText 1</string>
    <string name="list1_title">List 1</string>
    <string name="list1_summary">Summary of List 1</string>
    <string name="preserence">font_size</string>
    <string name="bear">Bear</string>
    <string name="dear">Dear</string>
    <string name="fox">Fox</string>
    <string name="hedgehog">Hedgehog</string>
    <string name="squirrel">Squirrel</string>
    <string name="rabbit">Rabbit</string>
    <string-array name="entries">
        <item>one</item>
        <item>two</item>
        <item>three</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string name="banner_ad_unit_id">ca-app-pub-1237459888817948/9456201581</string>
    <string name="reward_ad_unit_id">ca-app-pub-1237459888817948/3699160563</string>

    <string name="rate_me">rate me</string>
    <string name="rate_never">Close</string>

    <string name="dont_show">dont show me again</string>
    <string name="open_for">You have not enought money for buying this one. You can open this animal for watching adds. Open nightlight for watching video.</string>
    <string name="open">Open</string>

    <string name="enjoying">Enjoying lullabies?</string>
    <string name="enjoying_text">Your app store review helps spread the word and grow the Lullibabies community!</string>

    <string name="shop">shop</string>

    <string name="name_song_file_1">Relapse</string>
    <string name="author_song_file_1">Icarus</string>
    <string name="author_song_file_2">Sky</string>
    <string name="name_song_file_2">Zhang Zhengdi</string>
    <string name="name_song_file_3">Stream</string>
    <string name="author_song_file_3">Twarres</string>
    <string name="name_song_file_4">River Flows In You</string>
    <string name="author_song_file_4">Elise Bechstein</string>
    <string name="name_song_file_5">Kiss The Rain</string>
    <string name="author_song_file_5">Yiruma</string>
    <string name="name_song_file_6">Right Here Waiting For You</string>
    <string name="author_song_file_6">Happy Baby</string>
    <string name="name_song_file_7">Baby Love Song</string>
    <string name="author_song_file_7">Happy Baby</string>
    <string name="cheetah">cheetah</string>
    <string name="elephan">elephan</string>

    <integer name="card_flip_duration_full">1000</integer>
    <integer name="card_flip_duration_half">500</integer>

    <string name="turn_on">Turn on</string>
    <string name="again">Again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">ok</string>
    <string name="save">save</string>
    <string name="minutes">0 minutes</string>
    <string name="buy">Buy</string>
    <string name="close">Close</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="get_coins">Get 50 leaves for watch the adds?</string>
    <string name="congradilation">Congratulation, you open new nightlight!</string>
    <string name="sorry">Sorry, you have not got enough money!</string>
    <string name="tryme">Sorry, you have not got enough money!</string>
    <string name="add_comment">hello</string>

    <string name="settings">settings</string>
    <string name="leaf">leaf button for gets money from adds</string>
    <string name="game">button for start game with cards</string>
    <string name="melody">button for start melody list</string>
    <string name="empty_button">empty button for set bg with text</string>

</resources>