<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E000000"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_menu"
        android:clickable="false"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <FrameLayout
            android:id="@+id/st_background"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:background="@drawable/color5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/set_shadow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="image"
                app:srcCompat="@drawable/sh_fox" />

            <ImageView
                android:id="@+id/set_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="image"
                app:srcCompat="@drawable/an_fox" />

            <TextView
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:fontFamily="@font/minnie"
                android:gravity="start"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="Price: 250$"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/st_background">

            <FrameLayout
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:foregroundGravity="center">

                <ImageView
                    android:id="@+id/close_button"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:contentDescription="image"
                    app:srcCompat="@drawable/bt_bbutton" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/minnie"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/buy"
                    android:textColor="#FFFFFF"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/no_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:foregroundGravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:contentDescription="image"
                    app:srcCompat="@drawable/ic_bbutton" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/minnie"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/close"
                    android:textColor="#FFFFFF"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_for_adds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gray_corners"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/bt_present" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/open_for"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

